Fixed menu z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,5 +47,6 @@ section.active #contactzone {
 
 #menu.active {
     opacity: 1;
+    z-index: 5;
     transition-delay: 0.5s;
 }
